# CareerSpark

./: .replit  README.md  app.py  dependencies.txt  deploy_instructions.md  deployment_checklist.md  main.py  models.py  production_config.py  pyproject.toml  replit.md  routes.py  wsgi.py
attached_assets/: Pasted-Project-Name-AI-Powered-Resume-Optimizer-Description-Build-a-fully-featured-web-application-using-1755917018484_1755917018486.txt
data/: resumes.json
downloads/: resume_targeted_20250823_175046.txt
static/: manifest.json  sw.js
static/css/: custom.css
static/js/: app.js
templates/: 404.html  500.html  analyze.html  base.html  history.html  index.html  offline.html  preview.html  upload.html
templates/resume_templates/: chronological.html  combination.html  functional.html  targeted.html
uploads/: Agbajelola_Olasunkanmi_Julius-Software-Developer.docx
utils/: cleanup.py  grammar_checker.py  nlp_analyzer.py  resume_generator.py  resume_generator_from_job.py  scoring.py  text_extractor.py
